<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center" android:orientation="vertical" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:layout_width="200dp" android:layout_height="200dp" android:src="@drawable/ic_launcher"/>
    <TextView android:textSize="22sp" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-25dp" android:text="@string/app_name"/>
    <TextView android:textSize="16sp" android:id="@+id/version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_version"/>
    <TextView android:textSize="15sp" android:gravity="center" android:id="@+id/appInfo" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/appInfo"/>
    <Button android:id="@+id/pickApk" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/pickApk"/>
    <Button android:enabled="false" android:id="@+id/convert" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/convert"/>
    <TextView android:textSize="18sp" android:id="@+id/outputFolder" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/outputFolder"/>
    <TextView android:textSize="16sp" android:textStyle="bold" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/support"/>
    <TextView android:textSize="16sp" android:textStyle="italic|bold" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/supported_res_0x7f040009"/>
    <TextView android:textSize="16sp" android:textStyle="italic" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/supported_res_0x7f04000a"/>
    <TextView android:textSize="14sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/about_copyright"/>
</LinearLayout>
